workspace-sf/force-app/main/default/objects/Profissao__c/Profissao__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro das profissões</description>
    <label>Profissão</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profissões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>