workspace-sf/force-app/main/default/objects/Profissao__c/fields/CodigoFamilia__c.field-meta.xml
<CustomField>
    <fullName>CodigoFamilia__c</fullName>
    <label>Código família</label>
    <length>255</length>
    <type>Text</type>
</CustomField>