workspace-sf/force-app/main/default/objects/Profissao__c/fields/CodigoGrandeGrupo__c.field-meta.xml
<CustomField>
    <fullName>CodigoGrandeGrupo__c</fullName>
    <label>Código grande grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>