workspace-sf/force-app/main/default/objects/Profissao__c/fields/CodigoProfissao__c.field-meta.xml
<CustomField>
    <fullName>CodigoProfissao__c</fullName>
    <externalId>true</externalId>
    <label>Código da Profissão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>