workspace-sf/force-app/main/default/objects/Profissao__c/fields/CodigoSubGrupo__c.field-meta.xml
<CustomField>
    <fullName>CodigoSubGrupo__c</fullName>
    <label>Código sub grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>