workspace-sf/force-app/main/default/objects/Profissao__c/fields/CodigoSubGrupoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CodigoSubGrupoPrincipal__c</fullName>
    <label>Código sub grupo principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>