workspace-sf/force-app/main/default/objects/Profissao__c/fields/Limite_de_capital_maximo__c.field-meta.xml
<CustomField>
    <fullName>Limite_de_capital_maximo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Limite de capital máximo</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>