workspace-sf/force-app/main/default/objects/Profissao__c/fields/LimiteCapital__c.field-meta.xml
<CustomField>
    <fullName>LimiteCapital__c</fullName>
    <label>Limite de capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>