workspace-sf/force-app/main/default/objects/Profissao__c/fields/NomeCompleto__c.field-meta.xml
<CustomField>
    <fullName>NomeCompleto__c</fullName>
    <label>Nome completo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>