workspace-sf/force-app/main/default/objects/Profissao__c/fields/NomeFamilia__c.field-meta.xml
<CustomField>
    <fullName>NomeFamilia__c</fullName>
    <label>Nome família</label>
    <length>255</length>
    <type>Text</type>
</CustomField>