workspace-sf/force-app/main/default/objects/Profissao__c/fields/NomeGrandeGrupo__c.field-meta.xml
<CustomField>
    <fullName>NomeGrandeGrupo__c</fullName>
    <label>Nome grande grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>