workspace-sf/force-app/main/default/objects/Profissao__c/fields/NomeOcupacao__c.field-meta.xml
<CustomField>
    <fullName>NomeOcupacao__c</fullName>
    <description>Nome da Ocupação da Profissão</description>
    <label>Nome da Ocupação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>