workspace-sf/force-app/main/default/objects/Profissao__c/fields/NomeSubGrupo__c.field-meta.xml
<CustomField>
    <fullName>NomeSubGrupo__c</fullName>
    <label>Nome sub grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>