workspace-sf/force-app/main/default/objects/Profissao__c/fields/NomeSubGrupoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>NomeSubGrupoPrincipal__c</fullName>
    <label>Nome sub grupo principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>