workspace-sf/force-app/main/default/objects/Profissao__c/fields/ProfissaoSAP__c.field-meta.xml
<CustomField>
    <fullName>ProfissaoSAP__c</fullName>
    <label>Profissão do SAP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0952</fullName>
                <label>ACOUGUEIRO</label>
            </value>
            <value>
                <fullName>1047</fullName>
                <label>ACUPUNTURISTA</label>
            </value>
            <value>
                <fullName>0993</fullName>
                <label>ADESTRADOR DE ANIMAIS</label>
            </value>
            <value>
                <fullName>1050</fullName>
                <label>ADMINISTRADOR HOSPITALAR</label>
            </value>
            <value>
                <fullName>1051</fullName>
                <label>ADMINISTRADOR OU FUNCIONÁRIO D</label>
            </value>
            <value>
                <fullName>0131</fullName>
                <label>ADVOGADO</label>
            </value>
            <value>
                <fullName>0027</fullName>
                <label>AEROMOÇA,  COMISSÁRIO  DE BORD</label>
            </value>
            <value>
                <fullName>1054</fullName>
                <label>AGENCIADOR, VENDEDOR, PRODUTOR</label>
            </value>
            <value>
                <fullName>0405</fullName>
                <label>AGENCIADOR DE PROPAGANDA, CONT</label>
            </value>
            <value>
                <fullName>1057</fullName>
                <label>AGENTE, VISTORIADOR DE CARGAS</label>
            </value>
            <value>
                <fullName>0595</fullName>
                <label>AGENTE DE SERVICOS FUNERARIOS</label>
            </value>
            <value>
                <fullName>1055</fullName>
                <label>AGENTE DE VETOR/SANITAR,  GUAR</label>
            </value>
            <value>
                <fullName>0594</fullName>
                <label>AGENTE DE VIAGEM E GUIA DE TUR</label>
            </value>
            <value>
                <fullName>1056</fullName>
                <label>AGENTE TRIBUTOS, ARRECADADOR</label>
            </value>
            <value>
                <fullName>1059</fullName>
                <label>AGRIMENSOR</label>
            </value>
            <value>
                <fullName>0103</fullName>
                <label>AGRONOMO,  ENGENHEIRO AGRÔNOMO</label>
            </value>
            <value>
                <fullName>1060</fullName>
                <label>AJUDANTE DE MOTORISTA, AJUDANT</label>
            </value>
            <value>
                <fullName>1061</fullName>
                <label>AJUDANTE GERAL , AJUD/AUX. DE</label>
            </value>
            <value>
                <fullName>0591</fullName>
                <label>ALFAIATE, COSTUREIRA, ESTILIST</label>
            </value>
            <value>
                <fullName>1062</fullName>
                <label>ALMOXARIFE, ESTOQUISTAS E ATIV</label>
            </value>
            <value>
                <fullName>1069</fullName>
                <label>ANALISTA/ ASSESSOR/ TÉCNICO D</label>
            </value>
            <value>
                <fullName>1066</fullName>
                <label>ANALISTA/ ASSISTENTE/ ASSESSOR</label>
            </value>
            <value>
                <fullName>0392</fullName>
                <label>ANALISTA/ ASSISTENTE FINANCEIR</label>
            </value>
            <value>
                <fullName>1063</fullName>
                <label>ANALISTA DE PRODUÇÃO,  ANALIST</label>
            </value>
            <value>
                <fullName>0126</fullName>
                <label>ANALISTA DE SISTEMAS</label>
            </value>
            <value>
                <fullName>1064</fullName>
                <label>ANALISTA DE TREINAMENTO</label>
            </value>
            <value>
                <fullName>1065</fullName>
                <label>ANALISTA SUPORTE TÉCNICO INFOR</label>
            </value>
            <value>
                <fullName>0960</fullName>
                <label>APOSENTADO (POR INVALIDEZ )</label>
            </value>
            <value>
                <fullName>0963</fullName>
                <label>APOSENTADO (POR TEMPO DE SERVI</label>
            </value>
            <value>
                <fullName>0956</fullName>
                <label>ARBITRO ESPORTIVO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>