workspace-sf/force-app/main/default/objects/Profissao__c/validationRules/Limite_menor_que_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Limite_menor_que_zero</fullName>
    <active>true</active>
    <description>O Limite de capital máximo não pode ser menor que 0 (zero)</description>
    <errorConditionFormula>Limite_de_capital_maximo__c &lt; 0 || 
(ISBLANK(Limite_de_capital_maximo__c) ||
	ISNULL(Limite_de_capital_maximo__c))</errorConditionFormula>
    <errorDisplayField>Limite_de_capital_maximo__c</errorDisplayField>
    <errorMessage>O Limite de capital máximo não pode ser menor que 0 (zero)</errorMessage>
</ValidationRule>