workspace-sf/force-app/main/default/objects/Profissao__c/validationRules/ValidarAlteracaoNome.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarAlteracaoNome</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Name),
    $Profile.Name &lt;&gt; &apos;Administrador do sistema&apos;
)</errorConditionFormula>
    <errorMessage>O nome não pode ser alterado</errorMessage>
</ValidationRule>