workspace-sf/force-app/main/default/objects/Profissao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NomeFantasia__c</columns>
    <columns>CodigoGrandeGrupo__c</columns>
    <columns>CodigoSubGrupoPrincipal__c</columns>
    <columns>CodigoSubGrupo__c</columns>
    <columns>CodigoFamilia__c</columns>
    <columns>Codigo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Limite_de_capital_maximo__c</field>
        <operation>greaterThan</operation>
        <value>BRL 0</value>
    </filters>
    <label>Todas as profissões</label>
</ListView>