workspace-sf/force-app/main/default/objects/Profissao__c/listViews/TodasProfissoesEmAnalise.listView-meta.xml
<ListView>
    <fullName>TodasProfissoesEmAnalise</fullName>
    <columns>NAME</columns>
    <columns>NomeFantasia__c</columns>
    <columns>CodigoGrandeGrupo__c</columns>
    <columns>CodigoSubGrupoPrincipal__c</columns>
    <columns>CodigoSubGrupo__c</columns>
    <columns>CodigoFamilia__c</columns>
    <columns>Codigo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Em análise</value>
    </filters>
    <label>Todas as profissões em análise</label>
</ListView>